--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ p {
 body{
   width: 100%;
   height: 100%;
-  backgound-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -24,7 +23,7 @@ body{
 .sheet {
   background: black;
   opacity: 0.65;
-  padding: 0 3% 3% 1% ;
+  padding: 0% 3% 0% 3%;
   border-radius: 10px;
   margin-top: 10%;
 }
@@ -37,22 +36,22 @@ html{
 }
 
 ul.list-unstyled{
-  display:inline;
+/*  display:inline;*/
 }
     
 ul.list-unstyled li{
 font-family: fantasy;
 letter-spacing: 5px;    
 border-radius: 5px;     
- display: inline-flex;
-  margin-left:10%;
-  color: #6495ED;
+/* display: inline-flex;*/
+/*  margin-left:10%;*/
+  color: #fff;
+    
 /*  float:left;*/
   background-color: #333333;
 /*   text-align: right; */
   padding: 5px;
-  font-size: 1.6em;
-  font-weight: bold;  
+  font-size: 1em;
 }
 
 #temp:hover{
